--- a/src/assets/scss/products/productSummary.scss
+++ b/src/assets/scss/products/productSummary.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 8px;
-    background-color: rgb(245, 245, 250);
+    // background-color: rgb(245, 245, 250);
 
     .product-item {
         text-decoration: none;
