--- a/src/assets/scss/pages/home/include/homecategory.scss
+++ b/src/assets/scss/pages/home/include/homecategory.scss
@@ -18,7 +18,8 @@
         position: relative;
         height: 100%;
         overflow: hidden;
-  
+        padding-top: 7px;
+        
         &--list {
           width: 100%;
           display: grid;
@@ -39,7 +40,40 @@
               width: 60px;
               height: 60px;
               object-fit: contain;
+
+              --s: 60px;   /* the size of the image */     
+              aspect-ratio: 1;
+              outline: 1px solid rgba(255,255,255,0.8);
+              outline-offset: calc(var(--s)/-2);
+              cursor: pointer;
+              transition: 0.3s;
+              border-radius: 50%;
             }
+
+            img:hover {
+              outline: 2px solid #4ECDC4;
+              outline-offset: 4px;
+            }
+
+            // img::before{
+            //   content: '';
+            //   position: absolute;
+            //   top: 50%;
+            //   left: 50%;
+            //   width: 60px;
+            //   height: 60px;
+            //   opacity: .6;
+            //   background-color: var(--color-4);
+            //   border-radius: 50%;
+            //   -ms-border-radius: 50%;
+            //   -webkit-border-radius: 50%;
+            //   -moz-border-radius: 50%;
+            //   -ms-border-radius: 50%;
+            //   -o-border-radius: 50%;
+            //   transform: translate(-50%,-50%);
+            //   z-index: -1;
+            //   box-shadow: 4px 4px 60px rgb(100 69 237 / 37%);
+            // }
   
             h3 {
               text-align: center;
