--- a/src/assets/scss/pages/home/include/product.scss
+++ b/src/assets/scss/pages/home/include/product.scss
@@ -215,7 +215,7 @@
         display: flex;
         flex-wrap: wrap;
         gap: 8px;
-        background-color: rgb(245, 245, 250);
+        // background-color: rgb(245, 245, 250);
 
         .product-item {
             text-decoration: none;
@@ -263,10 +263,27 @@
                         position: relative;
                         width: 100%;
                         // padding-bottom: 100%;
+
+                        overflow: hidden;
+                        margin: 0 auto;
+
+                        img{
+                            width: 100%;
+                            -webkit-transition: all .8s ease;
+                            -moz-transition: all .8s ease;
+                            -ms-transition: all .8s ease;
+                            transition: all .8s ease;
+                        }
+                    }
+
+                    &--product-img img:hover{
+                        transform: scale(1.5);
                     }
                 }
 
                 .infor {
+                    margin-top: 15px;
+
                     .badge-service {
                         margin-bottom: 8px;
                         margin-top: 12px;
@@ -285,6 +302,10 @@
                             color: rgb(56, 56, 61);
                             margin: 0px;
                             word-break: break-word;
+                        }
+
+                        h3:hover{
+                            color: #DC39FC;
                         }
                     }
 
