--- a/src/assets/scss/pages/account/include/ordermanagement.scss
+++ b/src/assets/scss/pages/account/include/ordermanagement.scss
@@ -74,9 +74,9 @@
     padding: 35px;
 
     .empty-icon {
-        width: 200px;
-        height: 200px;
-        align-self: center;
+        width: 200;
+        height: 200;
+        justify-content: center;
     }
     
     .empty-order {
@@ -84,7 +84,6 @@
         color: rgb(56, 56, 61);
         font-size: 16px;
         font-weight: 400;
-        align-self: center;
     }
 
     .list-order {
