--- a/src/assets/scss/pages/account/include/ordermanagement.scss
+++ b/src/assets/scss/pages/account/include/ordermanagement.scss
@@ -87,13 +87,13 @@
     }
 
     .list-order {
-        margin-bottom: 20px;
         margin-top: 20px;
 
     }
 
-    .list-seperate {
+    .list-item {
         border-bottom: 1px solid rgb(206, 206, 206);
+        padding-bottom: 20px;
     }
 
     .group-btn-order {
