--- a/src/assets/scss/components/common/shopcart.scss
+++ b/src/assets/scss/components/common/shopcart.scss
@@ -15,7 +15,7 @@
             font-size: 20px;
             font-weight: 500;
             margin: 0px;
-            color: rgb(0, 0, 0);
+            color: var(--textColor);
             line-height: 28px;
             text-transform: uppercase;
             flex-basis: calc(797px);
