--- a/src/assets/scss/components/layout/footer.scss
+++ b/src/assets/scss/components/layout/footer.scss
@@ -1,13 +1,13 @@
 footer {
-    margin-top: 16px;
+    // margin-top: 16px;
     font-size: 12px;
     line-height: 16px;
     font-weight: normal;
     color: rgb(128, 128, 137);
-    background-color: white;
+    background-color: var(--bgFooter);
   
     .style-information {
-      padding: 16px 0px;
+      padding: 120px 0px 20px; 
     }
     .d-flexs {
       display: flex;
@@ -17,10 +17,11 @@ footer {
   
       .hot-line {
         a {
-          color: rgb(56, 56, 61);
+          // color: rgb(56, 56, 61);
+          color: rgb(128, 128, 137);
         }
         a:hover {
-          text-decoration: underline;
+          text-decoration: none;
         }
       }
       p {
@@ -36,14 +37,38 @@ footer {
         color: rgb(128, 128, 137);
       }
       .small-text {
-        display: block;
+        display: flex;
         margin-bottom: 8px;
         color: rgb(128, 128, 137);
+        position: relative;
+        font-size: 12px;
+        width: fit-content;
       }
       .small-text:hover{
         cursor: pointer;
-        text-decoration: underline;
+        text-decoration: none;
+        color: #dc39fc;
+        transition: all .3s ease-in-out;
       }
+      .small-text:hover::after {
+        transform: scale(1,1);
+        transform-origin: left center;
+      }
+      .small-text::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: #dc39fc;
+        transform: scale(0,1);
+        transform-origin: right center;
+        transition: transform 500ms ease;
+      }
+
+      
+
       .block:first-child {
         width: 268px;
       }
@@ -67,7 +92,7 @@ footer {
           color: rgb(128, 128, 137);
         }
         a:hover {
-          text-decoration: underline;
+          text-decoration: none;
         }
       }
       .block {
@@ -76,8 +101,9 @@ footer {
         h4 {
           font-size: 16px;
           line-height: 24px;
-          font-weight: 500;
-          color: rgb(56, 56, 61);
+          font-weight: 550;
+          // color: rgb(56, 56, 61);
+          color: #fff;
           margin-bottom: 12px;
           margin-top: 0px;
         }
@@ -91,7 +117,7 @@ footer {
             color: rgb(128, 128, 137);
           }
           a:hover {
-            text-decoration: underline;
+            text-decoration: none;
           }
         }
         .icon {
@@ -133,7 +159,7 @@ footer {
               color: rgb(128, 128, 137);
             }
             a:hover {
-              text-decoration: underline;
+              text-decoration: none;
             }
           }
         }
@@ -149,6 +175,72 @@ footer {
     }
   }
   
+.new-letter{
+  display: flex;
+  background: linear-gradient(132.71deg,#6345ED 18.12%,#DC39FC 81.74%);
+  border-radius: 30px;
+  padding: 60px 73px 26px 70px;
+  position: relative;
+  top: 85px;
+
+  .new-letter-content{
+    width: 45%;
+    padding: 0;
+
+    h3{
+      color: #fff;
+      font-size: 40px;
+      margin-bottom: 10px;
+      margin-top: 0;
+    }
+
+    p{
+      color: #fff;
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+  }
+
+  .new-letter-input{
+    width: 55%;
+
+    .form-subcribe{
+      position: relative;
+      max-width: 575px;
+
+      input{
+        background: #fff;
+        border-radius: 187px;
+        border: 0;
+        padding: 30px 355px 30px 40px;
+        font-size: 16px;
+        font-weight: 500;
+        color: #616161;
+      }
+
+      button{
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        padding: 17px 34px;
+        border: unset;
+        background-size: 200% auto;
+        background: linear-gradient(132.71deg,#DC39FC 18.12%, #6345ED 81.74%);
+        border-radius: 30px;
+        cursor: pointer;
+
+        font-size: 16px;
+        color: #fff;
+      }
+
+      button:hover{
+        background: #6345ED;
+      }
+    }
+  }
+}
+
   @media (max-width: 1024px) {
     .style-line {
       width: 100% !important;
