--- a/src/assets/scss/components/layout/header.scss
+++ b/src/assets/scss/components/layout/header.scss
@@ -63,6 +63,11 @@
                 height: 20px;
                 margin: 0px 8px 0px 0px;
             }
+
+            span{
+                position: relative;
+                top: 3px;
+            }
         }
     }
 
