--- a/src/assets/scss/pages/account/include/account_info.scss
+++ b/src/assets/scss/pages/account/include/account_info.scss
@@ -6,6 +6,7 @@
         line-height: 32px;
         font-weight: 300;
         margin: 4px 0px 12px;
+        color: var(--textColor);
     }
 
     .info-page {
