--- a/src/assets/scss/pages/account/include/sidebar.scss
+++ b/src/assets/scss/pages/account/include/sidebar.scss
@@ -19,7 +19,7 @@
             flex: 1 1 0%;
             font-size: 13px;
             line-height: 15px;
-            color: rgb(51, 51, 51);
+            color: var(--textColor);
             font-weight: 300;
 
             strong {
@@ -63,7 +63,7 @@
 
             li {
                 list-style: none;
-                color: rgb(0, 0, 0);
+                color: var(--textColor);
                 display: flex;
                 -webkit-box-align: center;
                 align-items: center;
@@ -73,12 +73,11 @@
                     margin-left: 4px;
                 }
             }
+            li:hover{
+            color: #DC39FC;
+                
+            }
         }
-        ul:hover {
-            background-color: rgb(189, 189, 212);
-            color: rgb(0, 0, 0);
-        }
-
 
         .iimg {
             width: 16px;
