--- a/src/assets/scss/pages/account/include/orderdetail.scss
+++ b/src/assets/scss/pages/account/include/orderdetail.scss
@@ -76,13 +76,14 @@
         width: 100%;
         
         .title-tab1 {
-            width: 50%;
+            width: 40%;
             padding: 12px 0px; 
             color: rgb(128, 128, 137);
+
         }
 
         .title-tab2 {
-            width: 10%;
+            width: 13%;
             padding: 12px 0px;
             color: rgb(128, 128, 137);
         }
@@ -102,49 +103,53 @@
     width: 100%;
     padding: 15px 20px;
     border-top: 1px solid rgb(242, 242, 242);
-    
+
     .title-tab1 {
         display: flex;
-        width: 50%;
-        padding: 15px 130px 15px 0px; 
-        color: rgb(128, 128, 137);
+        width: 40%;
+        padding: 15px 70px 15px 0px; 
+        color: rgb(0, 0, 0);
 
-        .tab1-img {
-            margin-right: 10px;
+        img {
+            width: 50px;
+            height: 50px;
         }
 
-        .tab1-btn {
-            margin-top: 10px;
-            
-            button {
-                cursor: pointer;
-                margin-right: 10px;
-                padding: 8px 15px;
-                border-color: #0080FF;
-                border-radius: 3px;
-                background-color: white;
-                color: #0080FF;
-                border-width: 1px;
-            }
-
-            button:hover {
-                background-color: #0080FF;
-                color: white;
+        .tab1-text{
+            margin-left: 15px;
+            .tab1-btn {
+                margin-top: 10px;
+                
+                button {
+                    cursor: pointer;
+                    margin-right: 10px;
+                    padding: 8px 15px;
+                    border-color: #0080FF;
+                    border-radius: 3px;
+                    background-color: white;
+                    color: #0080FF;
+                    border-width: 1px;
+                }
+    
+                button:hover {
+                    background-color: #0080FF;
+                    color: white;
+                }
             }
         }
         
     }
 
     .title-tab2 {
-        width: 10%;
+        width: 13%;
         padding: 12px 0px;
-        color: rgb(128, 128, 137);
+        color: rgb(0, 0, 0);
     }
 
     .title-tab3 {
         width: 20%;
         padding: 12px 0px;
         text-align: right; 
-        color: rgb(128, 128, 137);
+        color: rgb(0, 0, 0);
     }
 }
