--- a/src/assets/scss/components/common/pagination.scss
+++ b/src/assets/scss/components/common/pagination.scss
@@ -24,8 +24,7 @@
         justify-content: center;
 
         &.dots:hover {
-            background-color: transparent;
-            cursor: default;
+            cursor: none;
         }
 
         &:hover {
