addsupFooter and CallPhone and PlupinChat

--- a/src/assets/scss/pages/home/home.scss
+++ b/src/assets/scss/pages/home/home.scss
@@ -340,6 +340,7 @@
         overflow: hidden;
         margin-right: 16px;
         margin-left: 0;
+        border: 1px solid brown;
 
         .header {
             display: flex;
