--- a/src/assets/scss/pages/home/include/homecategory.scss
+++ b/src/assets/scss/pages/home/include/homecategory.scss
@@ -39,7 +39,7 @@
               overflow: hidden;
               width: 60px;
               height: 60px;
-              object-fit: contain;
+              object-fit: cover;
 
               --s: 60px;   /* the size of the image */     
               aspect-ratio: 1;
