--- a/src/assets/scss/pages/home/include/product.scss
+++ b/src/assets/scss/pages/home/include/product.scss
@@ -115,7 +115,8 @@
                 img {
                     transition: all 0.4s ease 0s;
                     border-radius: 4px;
-                    width: 48px;
+                    width: 50px;
+                    height: 50px;
                 }
 
                 &-text {
@@ -335,6 +336,7 @@
                         margin: 0 auto;
 
                         img{
+                            height: 180px;
                             width: 100%;
                             -webkit-transition: all .8s ease;
                             -moz-transition: all .8s ease;
