--- a/src/assets/scss/pages/productdetail/include/comment.scss
+++ b/src/assets/scss/pages/productdetail/include/comment.scss
@@ -471,9 +471,10 @@
 
             .rate-info {
                 margin-top: 10px;
+                text-align: center;
 
-                span {
-                    margin-left: 5px;
+                img {
+                    margin-bottom: 10px;
                 }
             }
 
