--- a/src/assets/scss/pages/productdetail/include/comment.scss
+++ b/src/assets/scss/pages/productdetail/include/comment.scss
@@ -9,7 +9,7 @@
 
     @media (max-width: 1024px) {
         flex-direction: column;
-        width: 100%;  
+        width: 100%;
     }
 
     .cmt-heading {
@@ -36,6 +36,7 @@
             flex-basis: 335px;
             flex-shrink: 0;
             margin: 0px 0px 32px;
+
             @media (max-width: 1024px) {
                 flex-basis: 0;
             }
@@ -59,7 +60,7 @@
                 z-index: 1;
                 display: inline-block;
             }
-            
+
             .rating-text {
                 line-height: 20px;
                 margin-top: 1px;
@@ -157,7 +158,7 @@
                 border: 1px solid rgb(26, 148, 255);
                 color: rgb(11, 116, 229);
             }
-            
+
             span {
                 height: 32px;
                 font-weight: 500;
@@ -176,7 +177,7 @@
             }
         }
 
-        
+
     }
 
     .rate-container {
@@ -202,7 +203,7 @@
     .customer-comment {
         padding: 32px 48px;
         display: flex;
-        border-top: 1px solid rgb(242, 242, 242); 
+        border-top: 1px solid rgb(242, 242, 242);
 
         @media (max-width: 1024px) {
             flex-direction: column;
@@ -260,12 +261,12 @@
                 color: rgb(56, 56, 61);
                 margin-left: 4px;
             }
-            
+
             img {
                 margin: 0px 8px 0px 0px;
             }
         }
-        
+
         .review-title {
             display: flex;
             -webkit-box-align: center;
@@ -289,7 +290,7 @@
                 }
             }
         }
-        
+
         .review-check-icon {
             display: flex;
             -webkit-box-align: center;
@@ -299,10 +300,10 @@
             font-weight: 400;
             line-height: 20px;
             color: rgb(0, 171, 86);
-            
+
             img {
                 display: block;
-                width: 14px;
+                width: 18px;
                 height: 14px;
                 background-color: rgb(0, 171, 86);
                 border-radius: 50%;
@@ -367,9 +368,9 @@
             user-select: none;
         }
     }
-            
-    .review-pages{
-        ul{
+
+    .review-pages {
+        ul {
             -webkit-box-pack: end;
             justify-content: flex-end;
             padding: 0px 48px;
@@ -436,7 +437,7 @@
     right: 0;
     bottom: 0;
     z-index: 1500;
-    background: rgba(0,0,0,.75);
+    background: rgba(0, 0, 0, .75);
     margin: auto;
 
     .rate-form {
@@ -445,7 +446,7 @@
         left: 50%;
         position: fixed;
         top: 50%;
-        transform: translate(-50%,-50%);
+        transform: translate(-50%, -50%);
         z-index: 1551;
         overflow-y: auto;
         max-height: 90vh;
@@ -471,7 +472,7 @@
         .rate-form-content {
             padding: 0 45px;
 
-            .rate { 
+            .rate {
                 display: flex;
                 margin: 20px 0 0;
                 justify-content: center;
@@ -490,7 +491,7 @@
 
                 margin-top: 20px;
                 margin-bottom: 30px;
-                
+
                 textarea {
                     background-color: #ffff;
                     border-radius: 4px 4px 0 0;
