--- a/src/assets/scss/pages/productdetail/include/comment.scss
+++ b/src/assets/scss/pages/productdetail/include/comment.scss
@@ -153,7 +153,7 @@
             display: flex;
             flex-wrap: wrap;
 
-            .filter-active {
+            .filteractive {
                 background: rgb(240, 248, 255);
                 border: 1px solid rgb(26, 148, 255);
                 color: rgb(11, 116, 229);
