--- a/src/assets/scss/pages/category/category.scss
+++ b/src/assets/scss/pages/category/category.scss
@@ -74,4 +74,17 @@
     }
 }
 
+.fullrate {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+    color: rgb(128, 128, 137);
+
+    span {
+        margin-right: 2px;
+        color: yellow;
+        font-size: 14px;
+    }
+}
+
 
