--- a/src/assets/scss/pages/home/include/product.scss
+++ b/src/assets/scss/pages/home/include/product.scss
@@ -151,14 +151,15 @@
         border-radius: 0px 0px 4px 4px;
 
         .content {
+            margin-top: 10px;
             display: flex;
             flex-wrap: wrap;
             align-self: stretch;
             background-color: rgb(255, 255, 255);
-            border-top: 1px solid rgb(242, 242, 242);
             margin-left: 6px;
 
             .dashboard-product--item {
+                height: auto;
                 width: 16.6667%;
             }
         }
