--- a/src/assets/scss/pages/productdetail/product.scss
+++ b/src/assets/scss/pages/productdetail/product.scss
@@ -172,11 +172,13 @@
             }
 
             .below-rate {
+                margin-left: 10px;
                 display: flex;
 
                 .star-on {
                     color: rgb(253, 216, 53);
                     display: inline-block;
+                    font-size: 16px;
                 }
             }
 
